--- a/style.css
+++ b/style.css
@@ -1,6 +1,29 @@
-.body{
-    background-color: red;
-    font-family: Arial, sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Vesper+Libre:wght@400;500;700;900&display=swap');
+
+body{
+    background-color: rgb(0, 0, 0);
+    font-family: Vesper Libre, serif;
+    color: white;
     margin: 0;
     padding: 0;
+}
+header {
+    padding: 5px;
+    padding-left: 5px;
+    text-align: left;
+    background: rgb(23,22,22);
+    color: white;
+    font-size: 40px;
+  }
+.burger {
+    width: 35px;
+    height: 5px;
+    background-color: white;
+    margin: 6px 0;
+    ;
+}
+.burgermenu{
+    position: relative; 
+    top: -2.3EM; 
+    right: -30em; 
 }
