--- a/style.css
+++ b/style.css
@@ -38,6 +38,27 @@ header {
     margin-top: 1%;
 
 }
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: rgb(23, 22, 22);
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px black;
+    padding: 12px 16px;
+    z-index: 1;
+    color: beige;
+    margin-left: -12%;
+}
+
+.dropdown:hover .dropdown-content {    
+    display: block;
+}
+
+  
+
+.dropdown :hover{
+    background-color: red;
+}
 
 /* Für search */
 form {
@@ -62,24 +83,3 @@ input[type="submit"] {
 }
 
   
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: red;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(207, 23, 23, 0.2);
-    padding: 12px 16px;
-    z-index: 1;
-    margin-right: 5%;
-    color: beige;
-}
-
-.dropdown:hover .dropdown-content {    
-    display: block;
-}
-
-  
-
-.dropdown :hover{
-    background-color: red;
-}
