--- a/style.css
+++ b/style.css
@@ -18,33 +18,31 @@ header {
     
 }
 .frontpage_books {
-    width: 16.5%;
+    width: 13%;
     float: left;
     height: 400px;
-    outline: auto;
+    text-align: center;
+    margin: 1.8%;
 }
 
 .result_box {
-    background-color: darkblue;
-    width: 16.5%;
+    width: 13%;
     float: left;
     height: 400px;
-    outline: auto;
+    text-align: center;
+    margin: 1.8%;
 }
-.bild1{
-    max-width: 50%;
-    margin: auto;
-}
-.bild2{
-    max-width: 50%;
-    align-items: center;
-}
-.bild3{
-    max-width: 50%;
-    align-items: center;
-    display: flex; 
+.book1{
+    display: flex;
     justify-content: center;
+    align-items: center;
 }
+
+.bild1{
+    max-width: 75%;
+    
+}
+
 
 #name {
     width:70%;
