--- a/style.css
+++ b/style.css
@@ -10,12 +10,27 @@ body {
     color: white;
     margin: 0;
     padding: 0;
+    line-height: 1.2;
 }
 
 header {
     background: rgb(23, 22, 22);
-    padding: 1px;
+    padding: 1%;
+
     
+}
+#searchbar{
+    color: white;
+    /*background: rgb(23, 22, 22);*/
+    position: absolute;
+    align-items: center;
+    padding: 1%;
+    
+    
+
+}
+#noresults{
+    padding: 1%;
 }
 .frontpage_books {
     width: 13%;
@@ -40,6 +55,7 @@ header {
 
 .bild1{
     max-width: 75%;
+    border-radius: 15pt;
     
 }
 
@@ -52,18 +68,19 @@ header {
     color: white;   
 }
 
+/*dropdown und inhalt*/
 .burger {
-    width: 35px;
-    height: 5px;
+    width: 70px;
+    height: 10px;
     background-color: white;
     color: white;
-    margin: 6px;
+    margin: 10px;
 }
 
 .dropdown {
     float:right;
     width:5%;
-    margin-top: 1%;
+    margin-top: -1%;
     margin-right:5%
 }
 
@@ -73,15 +90,17 @@ header {
 
 .dropdown-content {
     display: none;
-    position: absolute;
+    position: relative;
     background-color: rgb(23, 22, 22);
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px black;
     padding: 12px 16px;
-    z-index: 1;
+    z-index: 2;
     color: beige;
-    float: left;
-    width: 10%; 
+    float: right;
+    width: 15%; 
+    font-size: 20px;
+    margin-top: 35%;
 }
 
 .dropdown:hover .dropdown-content {    
@@ -116,4 +135,7 @@ input[type="submit"] {
     color: white;
     border: none;
     cursor: pointer;
+}
+#botd{
+    padding: 1%;
 }
