--- a/style.css
+++ b/style.css
@@ -139,3 +139,26 @@ input[type="submit"] {
 #botd{
     padding: 1%;
 }
+.bookdrop{
+    display: none;
+    position: relative;
+    background-color: rgb(23, 22, 22);
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px black;
+    padding: 12px 16px;
+    z-index: 2;
+    color: beige;
+    float: right;
+    width: 15%; 
+    font-size: 20px;
+}
+.book1:hover .bookdrop-content {    
+    display: block;
+}
+
+.book1 :hover{
+    background-color: green
+}
+.frontpage p :hover{
+    background-color: blueviolet;
+};
