--- a/style.css
+++ b/style.css
@@ -111,15 +111,24 @@ header {
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px black;
     padding: 12px 16px;
-    z-index: 2;
     color: beige;
     float: right;
     width: 15%; 
     font-size: 20px;
     margin-top: 35%;
 }
+.dropdown1{
+    background-color: transparent;
+    padding: 1%;
+}
+.dropdown1:hover .dropdown-content {    
+    display: block;
+}
 
 .dropdown:hover .dropdown-content {    
+    display: block;
+}
+.dropdown-content:hover .dropdown-content {    
     display: block;
 }
 
@@ -177,4 +186,4 @@ input[type="submit"] {
 }
 .frontpage p :hover{
     background-color: blueviolet;
-};
+}
