--- a/style.css
+++ b/style.css
@@ -161,3 +161,49 @@ input[type="submit"] {
 }
 
 
+
+
+
+
+
+
+
+
+
+.bookdrop{
+    float:right;
+    width:5%;
+    margin-top: -1%;
+    margin-right:5%
+}
+
+.aaaa a {
+    color: white;
+}
+
+.bookdrop-content {
+    display: block;
+    position: relative;
+    background-color: rgb(23, 22, 22);
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px black;
+    padding: 12px 16px;
+    color: beige;
+    float: right;
+    width: 15%; 
+    font-size: 20px;
+    margin-top: 35%;
+}
+
+.aaaa:hover .bookdrop-content {    
+    display: block;
+}
+
+.book1:hover{
+    background-color: blue;
+}
+
+.book1:hover .bookdrop-content {
+    background-color: red;
+    display: block;
+}
