--- a/style.css
+++ b/style.css
@@ -94,9 +94,7 @@ header {
 
 .bookwahl{
     color: red;
-}
-.booksh{
-    background-color: red 
+    width: 5%
 }
 .dropdown-content {
     display: none;
@@ -112,11 +110,41 @@ header {
     font-size: 20px;
     margin-top: 35%;
 }
-
+.bookwahl-content {
+    display: none;
+    position: fixed;
+    background-color: rgb(23, 22, 22);
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px black;
+    padding: 12px 16px;
+    z-index: 2;
+    color: beige;
+    float: right;
+    width: 15%; 
+    font-size: 20px;
+    margin-top: 0%;
+}
+.userwahl-content {
+    display: none;
+    position: fixed;
+    background-color: rgb(23, 22, 22);
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px black;
+    padding: 12px 16px;
+    z-index: 2;
+    color: beige;
+    float: right;
+    width: 15%; 
+    font-size: 20px;
+    margin-top: 0%;
+}
 .dropdown:hover .dropdown-content {    
     display: block;
 }
-.bookwahl:hover .dropdown-content {    
+.bookwahl:hover .bookwahl-content {    
+    display: block;
+}
+.userwahl:hover .userwahl-content {    
     display: block;
 }
 .bookwahl:hover{
