--- a/style.css
+++ b/style.css
@@ -122,6 +122,13 @@ a:hover{
     display: inline-block;
     
 }
+.kundewahl{
+    padding-left: 2%;
+    font-size: 34px;
+    width: 15%;
+    vertical-align: top;
+    display: inline-block;
+}
 .dropdown-content {
     display: none;
     position: relative;
@@ -164,6 +171,22 @@ a:hover{
     font-size: 20px;
     margin-top: 0%;
     color: white;
+
+}
+.kundewahl-content {
+    display: none;
+    position: fixed;
+    background-color: rgb(23, 22, 22);
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px black;
+    padding: 12px 16px;
+    z-index: 2;
+    color: beige;
+    float: right;
+    width: 15%; 
+    font-size: 20px;
+    margin-top: 0%;
+    color: white;
 }
 .dropdown:hover .dropdown-content {    
     display: block;
@@ -177,7 +200,9 @@ a:hover{
 .dropdown:hover{
     background-color: rgb(23, 22, 22);
 }
-
+.kundewahl:hover .kundewahl-content {    
+    display: block;
+}
 .signhh{
     display: inline-block;
     margin-left: 90%;
@@ -251,13 +276,17 @@ select {
     padding-left: 2%;
     font-size: 34px;
 }
-form[name="Katalog_add"]{
+form[name="hinzufuegen"]{
     display: block;
     justify-content: left;
     margin-left: 2%;
 }
-form[name="Kurztitle_add"]{
-    display: block;
-    justify-content: left;
-    margin-left: 2%;
+input[type="number"] {
+    padding: 5px 10px;
+    font-size: 25px;
+    background-color: rgb(23, 22, 22);
+    color: white;
+    border: none;
+    cursor: pointer;
+    font-family: Vesper Libre, serif;
 }
